<resources>
    <string name="app_name">RoteiroAndroidApp</string>
    <string name="login">Login</string>
    <string name="slogan">More than an app, a digital passport</string>
    <string name="signup">Sign Up</string>
    <string name="edit_email">Insert your email here</string>
    <string name="edit_password">Insert your password here</string>
    <string name="recuperar">I forgot my password</string>
    <string name="proximo1">Next</string>
    <string name="guardar">Save</string>
    <string name="proximo2">Go to login</string>
    <string name="introSlider1Titulo">Explore the world at your own pace</string>
    <string name="introSlider1Descricao">Discover unique destinations and save your favorite itineraries in a single app.</string>
    <string name="introSlider2Titulo">Organize your trips with ease</string>
    <string name="introSlider2Descricao">Add places, activities and restaurants to your itineraries quickly and intuitively.</string>
    <string name="introSlider3Titulo">Record and share your moments</string>
    <string name="editarLocal">Edit Locals</string>
    <string name="profile">Profile</string>
    <string name="nome_user">Name of User</string>
    <string name="num_viagens">Total of trips: 2</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm Password</string>
    <string name="trips">Trips</string>
    <string name="title_viagem">Title of the trip</string>
    <string name="destination_viagem">Trip destination</string>
    <string name="description_viagem">Trip description</string>
    <string name="date_viagem">Travel days</string>
    <string name="rating">Trip Rating</string>
    <string name="edit_local">Edit Locations</string>
    <string name="rating_location">Rating of location</string>
    <string name="visited_location">Day of the place visited</string>
    <string name="type_local">Location Type</string>
    <string name="description_local">Location Description</string>
    <string name="price_local">Price(s)</string>
    <string name="location_local">Location</string>
    <string name="adicionarLocal">Add Local</string>
    <string name="name_local">Name of the location</string>
    <string name="edit_name">Edit Location</string>
    <string name="create_trip">Create Trip</string>
    <string name="viagem">Trips</string>
    <string name="perfil">Profile</string>
    <string name="add_trip">Add Trip</string>
    <string name="registro">Register</string>
    <string name="add_username">Insert your username here</string>
    <string name="introSlider3Descricao">Save memories and turn each trip into a story.</string>
    <string name="add_name">Insert your name here</string>
    <string name="share">Share Trip</string>
</resources>