<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexPerfilFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        tools:context=".IndexPerfilFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_bold"
            android:paddingTop="40dp"
            android:text="@string/profile"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/user_image" />

        <TextView
            android:id="@+id/nome_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/nome_user"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nome_user"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/nome_user"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/num_viagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_viagens"
            android:layout_below="@id/username"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_profile"
            android:layout_width="220dp"
            android:layout_height="58dp"
            android:background="@drawable/border_blue"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:layout_below="@id/num_viagens"
            android:text="@string/edit_profile"
            android:layout_marginTop="50dp"
            android:textSize="23sp"
            android:layout_centerHorizontal="true"
            android:translationZ="1dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout"
            android:layout_width="220dp"
            android:layout_height="58dp"
            android:background="@drawable/border_red"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:layout_below="@id/edit_profile"
            android:text="@string/logout"
            android:layout_marginTop="25dp"
            android:textSize="23sp"
            android:layout_centerHorizontal="true"
            android:translationZ="1dp"/>

        <ImageView
            android:id="@+id/cutted_roteiros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.2"
            android:src="@drawable/cutted_roteiros"
            android:translationY="403dp" />
    </RelativeLayout>

</FrameLayout>