<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:backgroundTint="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="216dp"
        android:layout_height="182dp"
        android:src="@drawable/logo_roteiros"
        tools:ignore="MissingConstraints"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/roteiros_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_bold"
        android:text="Roteiros"
        android:textSize="68sp"
        android:textColor="#098336"/>

    <TextView
        android:id="@+id/roteiros_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@id/roteiros_title"
        android:text="@string/slogan"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_marginTop="-30dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/roteiros_slogan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="#098336"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btn_criar"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:backgroundTint="#E8EDF2"
        android:textColor="#000000"
        android:textSize="28sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <ImageView
        android:id="@+id/aviao_com_rastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/aviao_com_rastro"
        android:translationX="-125dp"
        android:translationY="450dp" />

</RelativeLayout>