<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white">

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/backbutton" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="#000000"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:letterSpacing="0.2"
            android:textColor="#000000"
            android:shadowColor="#2C2D2D"
            android:shadowDx="2"
            android:shadowDy="15"
            android:shadowRadius="15"
            android:text="EMAIL"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_edittext"
            android:clipToOutline="false"
            android:textSize="12sp"
            android:elevation="4dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/edit_email"
            android:outlineProvider="background"
            android:paddingLeft="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:letterSpacing="0.2"
            android:shadowColor="#2C2D2D"
            android:textColor="#000000"
            android:shadowDx="2"
            android:shadowDy="15"
            android:shadowRadius="15"
            android:layout_marginTop="10dp"
            android:text="PASSWORD"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_edittext"
            android:clipToOutline="false"
            android:textSize="12sp"
            android:elevation="4dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/edit_password"
            android:outlineProvider="background"
            android:paddingLeft="10dp" />
        <TextView
            android:id="@+id/recuperar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recuperar"
            android:fontFamily="@font/poppins"
            android:textStyle="italic"
            android:textSize="9sp"
            android:textAllCaps="true"/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_below="@id/linear"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="#098336"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/aviao_com_rastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/aviao_com_rastro"
        android:translationX="-125dp"
        android:translationY="450dp" />

</RelativeLayout>