<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexLogin"
    android:background="@color/white"
    android:backgroundTint="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="216dp"
        android:layout_height="182dp"
        android:src="@drawable/logo_roteiros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/roteiros_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/logo"
        android:fontFamily="@font/poppins_bold"
        android:text="Roteiros"
        android:textSize="68sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:textColor="#098336"/>

    <TextView
        android:id="@+id/roteiros_slogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@id/roteiros_title"
        android:text="@string/slogan"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roteiros_title"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_marginHorizontal="70dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#098336"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roteiros_slogan"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btn_criar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:text="@string/signup"
        android:backgroundTint="#E8EDF2"
        android:textColor="#000000"
        android:textSize="28sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <ImageView
        android:id="@+id/aviao_com_rastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/aviao_com_rastro"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>