<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".Login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:scaleType="centerInside"
        android:src="@drawable/backbutton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backbutton"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:letterSpacing="0.2"
        android:shadowColor="#2C2D2D"
        android:shadowDx="2"
        android:shadowDy="15"
        android:shadowRadius="15"
        android:text="EMAIL"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/border_edittext"
        android:clipToOutline="false"
        android:elevation="4dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:outlineProvider="background"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_email"
        app:layout_constraintStart_toStartOf="@id/text_email"
        app:layout_constraintEnd_toEndOf="@id/text_email"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:letterSpacing="0.2"
        android:shadowColor="#2C2D2D"
        android:shadowDx="2"
        android:shadowDy="15"
        android:shadowRadius="15"
        app:layout_constraintStart_toStartOf="@id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="@id/edit_email"
        android:text="PASSWORD"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/border_edittext"
        android:clipToOutline="false"
        android:elevation="4dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:outlineProvider="background"
        android:paddingLeft="10dp"
        app:layout_constraintStart_toStartOf="@id/text_password"
        app:layout_constraintTop_toBottomOf="@id/text_password"
        app:layout_constraintEnd_toEndOf="@id/text_password"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/recuperar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/recuperar"
        android:textAllCaps="true"
        android:textSize="10sp"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintStart_toStartOf="@id/edit_password"
        app:layout_constraintEnd_toEndOf="@id/edit_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="#098336"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/recuperar"
        app:layout_constraintEnd_toEndOf="@id/recuperar"
        app:layout_constraintTop_toBottomOf="@id/recuperar"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <ImageView
        android:id="@+id/aviao_com_rastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/aviao_com_rastro"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline2"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>